--- a/geekshop/mainapp/templates/mainapp/index.html
+++ b/geekshop/mainapp/templates/mainapp/index.html
@@ -1,7 +1,6 @@
 {% extends 'mainapp/base.html' %}
 {% load staticfiles %}
 
-
 {% block css %}
     <link href="{% static 'css/index.css' %}" rel="stylesheet">
 {% endblock %}
@@ -17,7 +16,7 @@
                         Бесплатная доставка по всему миру! Аутлет: до -70% Собственный бренд. -20% новым покупателям.
                     </p>
                     <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                        <a id="start-purchase-link" href="{% url 'products' %}">
+                        <a id="start-purchase-link" href="{% url 'products:index' %}">
                             Начать покупки
                         </a>
                     </button>
