--- a/geekshop/authapp/templates/authapp/profile.html
+++ b/geekshop/authapp/templates/authapp/profile.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block css %}
-    <link href="{% static 'css/profile.css' %}" rel="stylesheet">
+    <link href="{% static 'css/products.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -16,10 +16,10 @@
                 <h4 class="mt-3 mb-3">Профиль</h4>
                 <div class="col-lg-12 text-center">
                     <img width="100" height="100"
-                         src="{% if user.avatar %}{{ user.avatar.url }} {% else %}{% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
+                         src="{% if user.avatar %} {{ user.avatar.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
                          class="img-thumbnail">
                 </div>
-                <form action="{% url 'authapp:profile' %}" method="post" enctype="multipart/form-data">
+                <form action="{% url 'auth:profile' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-lg-6">
@@ -39,9 +39,9 @@
                         <div class="col-lg-12">
                             <div class="custom-file">
                                 {{ form.avatar }}
-                                <label class="custom-file-label" for="{{ form.avatar.id_for_label }}">Выберите
-                                    изображение</label>
-
+                                <label class="custom-file-label" for="{{ form.avatar.id_for_label }}">
+                                    Выберите изображение
+                                </label>
                             </div>
                         </div>
                     </div>
@@ -57,21 +57,15 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="inputBirthday">День рождения</label>
-                            <input class="form-control py-4" id="inputBirthday" type="date"
-                                   aria-describedby="birthdayHelp" value="1998-01-13"/>
-                        </div>
-                        <div class="col-lg-6" style="margin-top: 33px;">
+                        <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
                     </div>
                 </form>
             </div>
-             <div class="col-lg-5">
+            <div class="col-lg-5">
                 {% include 'basketapp/basket.html' %}
             </div>
         </div>
     </div>
-
 {% endblock %}
