--- a/geekshop/adminapp/templates/adminapp/admin-users-read.html
+++ b/geekshop/adminapp/templates/adminapp/admin-users-read.html
@@ -1,5 +1,9 @@
 {% extends 'adminapp/base.html' %}
 
+{% block title %}
+    GeekShop - Пользователи
+{% endblock %}
+
 {% block content %}
     <h1 class="mt-4">Пользователи</h1>
     <div class="card mb-4">
@@ -31,7 +35,7 @@
                     </tr>
                     </tfoot>
                     <tbody>
-                    {% for user in users %}
+                    {% for user in object_list %}
                         <tr>
                             <td>
                                 <a href="{% url 'admin_staff:admin_users_update' user.id %}" style="color: dodgerblue">
